--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ tempfile = "3.1.0"
 simple-error = "0.2.1"
 approx = "0.3.2"
 libc = "0.2.68"
+ndarray = "0.13.0"
+serial_test = "0.4.0"
 libipopt-sys = { path = "libipopt-sys", version = "0.1.0", optional = true}
