--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "BSD-2-Clause"
 description = "Optimization problem abstractions, solver interfaces, and more."
 
 [features]
-ipopt = ["libipopt-sys"]
+ipopt = []
 
 [dependencies]
 num-traits = "0.2.11"
@@ -17,4 +17,3 @@ approx = "0.3.2"
 libc = "0.2.68"
 ndarray = "0.13.0"
 serial_test = "0.4.0"
-libipopt-sys = { path = "libipopt-sys", version = "0.1.0", optional = true}
