--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "numopt"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Tomas Tinoco De Rubira <ttinoco5687@gmail.com>"]
 edition = "2018"
 license = "BSD-2-Clause"
-description = "Optimization problem abstractions, solver interfaces, and more."
+description = "Numerical optimization problem abstractions, solver interfaces, and more."
+documentation = "https://docs.rs/numopt"
+repository = "https://github.com/ttinoco/numopt"
 
 [features]
 ipopt = []
@@ -17,3 +19,6 @@ approx = "0.3.2"
 libc = "0.2.68"
 ndarray = "0.13.0"
 serial_test = "0.4.0"
+
+[package.metadata.docs.rs]
+all-features = true
